professor/y.output
State 109 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: PROGRAM DECLS MAIN

    2 PROGRAM: TK_PROGRAM TK_ID ';'

    3 DECLS: DECL DECLS
    4      | %empty

    5 DECL: TK_VAR VARS
    6     | FUNCTION

    7 $@1: %empty

    8 $@2: %empty

    9 FUNCTION: $@1 CABECALHO ';' CORPO $@2 ';'

   10 CABECALHO: TK_FUNCTION TK_ID OPC_PARAM ':' TK_ID

   11 OPC_PARAM: '(' PARAMS ')'
   12          | %empty

   13 PARAMS: PARAM ';' PARAMS
   14       | PARAM

   15 PARAM: IDS ':' TK_ID
   16      | IDS ':' TK_ARRAY '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID

   17 CORPO: TK_VAR VARS BLOCO
   18      | BLOCO

   19 VARS: VAR ';' VARS
   20     | %empty

   21 VAR: IDS ':' TK_ID
   22    | IDS ':' TK_ARRAY '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID

   23 IDS: IDS ',' TK_ID
   24    | TK_ID

   25 MAIN: BLOCO '.'

   26 $@3: %empty

   27 BLOCO: TK_BEGIN $@3 CMDS TK_END

   28 CMDS: CMD ';' CMDS
   29     | %empty

   30 CMD: WRITELN
   31    | ATRIB
   32    | CMD_IF
   33    | BLOCO
   34    | CMD_FOR

   35 CMD_FOR: TK_FOR NOME_VAR TK_ATRIB E TK_TO E TK_DO CMD

   36 CMD_IF: TK_IF E TK_THEN CMD
   37       | TK_IF E TK_THEN CMD TK_ELSE CMD

   38 WRITELN: TK_WRITELN '(' E ')'

   39 ATRIB: TK_ID TK_ATRIB E
   40      | TK_ID '[' E ']' TK_ATRIB E

   41 E: E '+' E
   42  | E '-' E
   43  | E '*' E
   44  | E TK_MOD E
   45  | E '/' E
   46  | E '<' E
   47  | E '>' E
   48  | E TK_MEIG E
   49  | E TK_MAIG E
   50  | E '=' E
   51  | E TK_DIF E
   52  | E TK_AND E
   53  | '(' E ')'
   54  | F

   55 F: TK_CINT
   56  | TK_CDOUBLE
   57  | TK_CSTRING
   58  | TK_ID '[' E ']'
   59  | TK_ID '[' E ']' '[' E ']'
   60  | TK_ID
   61  | TK_ID '(' EXPRS ')'

   62 EXPRS: EXPRS ',' E
   63      | E

   64 NOME_VAR: TK_ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 38 53 61
')' (41) 11 38 53 61
'*' (42) 43
'+' (43) 41
',' (44) 23 62
'-' (45) 42
'.' (46) 25
'/' (47) 45
':' (58) 10 15 16 21 22
';' (59) 2 9 13 19 28
'<' (60) 46
'=' (61) 50
'>' (62) 47
'[' (91) 16 22 40 58 59
']' (93) 16 22 40 58 59
error (256)
TK_ID (258) 2 10 15 16 21 22 23 24 39 40 58 59 60 61 64
TK_CINT (259) 16 22 55
TK_CDOUBLE (260) 56
TK_VAR (261) 5 17
TK_PROGRAM (262) 2
TK_BEGIN (263) 27
TK_END (264) 27
TK_ATRIB (265) 35 39 40
TK_WRITELN (266) 38
TK_CSTRING (267) 57
TK_FUNCTION (268) 10
TK_MOD (269) 44
TK_MAIG (270) 49
TK_MEIG (271) 48
TK_DIF (272) 51
TK_IF (273) 36 37
TK_THEN (274) 36 37
TK_ELSE (275) 37
TK_AND (276) 52
TK_FOR (277) 35
TK_TO (278) 35
TK_DO (279) 35
TK_ARRAY (280) 16 22
TK_OF (281) 16 22
TK_PTPT (282) 16 22


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
S (44)
    on left: 1, on right: 0
PROGRAM (45)
    on left: 2, on right: 1
DECLS (46)
    on left: 3 4, on right: 1 3
DECL (47)
    on left: 5 6, on right: 3
FUNCTION (48)
    on left: 9, on right: 6
$@1 (49)
    on left: 7, on right: 9
$@2 (50)
    on left: 8, on right: 9
CABECALHO (51)
    on left: 10, on right: 9
OPC_PARAM (52)
    on left: 11 12, on right: 10
PARAMS (53)
    on left: 13 14, on right: 11 13
PARAM (54)
    on left: 15 16, on right: 13 14
CORPO (55)
    on left: 17 18, on right: 9
VARS (56)
    on left: 19 20, on right: 5 17 19
VAR (57)
    on left: 21 22, on right: 19
IDS (58)
    on left: 23 24, on right: 15 16 21 22 23
MAIN (59)
    on left: 25, on right: 1
BLOCO (60)
    on left: 27, on right: 17 18 25 33
$@3 (61)
    on left: 26, on right: 27
CMDS (62)
    on left: 28 29, on right: 27 28
CMD (63)
    on left: 30 31 32 33 34, on right: 28 35 36 37
CMD_FOR (64)
    on left: 35, on right: 34
CMD_IF (65)
    on left: 36 37, on right: 32
WRITELN (66)
    on left: 38, on right: 30
ATRIB (67)
    on left: 39 40, on right: 31
E (68)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54, on right: 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 58 59 62
    63
F (69)
    on left: 55 56 57 58 59 60 61, on right: 54
EXPRS (70)
    on left: 62 63, on right: 61 62
NOME_VAR (71)
    on left: 64, on right: 35


State 0

    0 $accept: . S $end

    TK_PROGRAM  shift, and go to state 1

    S        go to state 2
    PROGRAM  go to state 3


State 1

    2 PROGRAM: TK_PROGRAM . TK_ID ';'

    TK_ID  shift, and go to state 4


State 2

    0 $accept: S . $end

    $end  shift, and go to state 5


State 3

    1 S: PROGRAM . DECLS MAIN

    TK_VAR  shift, and go to state 6

    TK_FUNCTION  reduce using rule 7 ($@1)
    $default     reduce using rule 4 (DECLS)

    DECLS     go to state 7
    DECL      go to state 8
    FUNCTION  go to state 9
    $@1       go to state 10


State 4

    2 PROGRAM: TK_PROGRAM TK_ID . ';'

    ';'  shift, and go to state 11


State 5

    0 $accept: S $end .

    $default  accept


State 6

    5 DECL: TK_VAR . VARS

    TK_ID  shift, and go to state 12

    $default  reduce using rule 20 (VARS)

    VARS  go to state 13
    VAR   go to state 14
    IDS   go to state 15


State 7

    1 S: PROGRAM DECLS . MAIN

    TK_BEGIN  shift, and go to state 16

    MAIN   go to state 17
    BLOCO  go to state 18


State 8

    3 DECLS: DECL . DECLS

    TK_VAR  shift, and go to state 6

    TK_FUNCTION  reduce using rule 7 ($@1)
    $default     reduce using rule 4 (DECLS)

    DECLS     go to state 19
    DECL      go to state 8
    FUNCTION  go to state 9
    $@1       go to state 10


State 9

    6 DECL: FUNCTION .

    $default  reduce using rule 6 (DECL)


State 10

    9 FUNCTION: $@1 . CABECALHO ';' CORPO $@2 ';'

    TK_FUNCTION  shift, and go to state 20

    CABECALHO  go to state 21


State 11

    2 PROGRAM: TK_PROGRAM TK_ID ';' .

    $default  reduce using rule 2 (PROGRAM)


State 12

   24 IDS: TK_ID .

    $default  reduce using rule 24 (IDS)


State 13

    5 DECL: TK_VAR VARS .

    $default  reduce using rule 5 (DECL)


State 14

   19 VARS: VAR . ';' VARS

    ';'  shift, and go to state 22


State 15

   21 VAR: IDS . ':' TK_ID
   22    | IDS . ':' TK_ARRAY '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID
   23 IDS: IDS . ',' TK_ID

    ':'  shift, and go to state 23
    ','  shift, and go to state 24


State 16

   27 BLOCO: TK_BEGIN . $@3 CMDS TK_END

    $default  reduce using rule 26 ($@3)

    $@3  go to state 25


State 17

    1 S: PROGRAM DECLS MAIN .

    $default  reduce using rule 1 (S)


State 18

   25 MAIN: BLOCO . '.'

    '.'  shift, and go to state 26


State 19

    3 DECLS: DECL DECLS .

    $default  reduce using rule 3 (DECLS)


State 20

   10 CABECALHO: TK_FUNCTION . TK_ID OPC_PARAM ':' TK_ID

    TK_ID  shift, and go to state 27


State 21

    9 FUNCTION: $@1 CABECALHO . ';' CORPO $@2 ';'

    ';'  shift, and go to state 28


State 22

   19 VARS: VAR ';' . VARS

    TK_ID  shift, and go to state 12

    $default  reduce using rule 20 (VARS)

    VARS  go to state 29
    VAR   go to state 14
    IDS   go to state 15


State 23

   21 VAR: IDS ':' . TK_ID
   22    | IDS ':' . TK_ARRAY '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID

    TK_ID     shift, and go to state 30
    TK_ARRAY  shift, and go to state 31


State 24

   23 IDS: IDS ',' . TK_ID

    TK_ID  shift, and go to state 32


State 25

   27 BLOCO: TK_BEGIN $@3 . CMDS TK_END

    TK_ID       shift, and go to state 33
    TK_BEGIN    shift, and go to state 16
    TK_WRITELN  shift, and go to state 34
    TK_IF       shift, and go to state 35
    TK_FOR      shift, and go to state 36

    $default  reduce using rule 29 (CMDS)

    BLOCO    go to state 37
    CMDS     go to state 38
    CMD      go to state 39
    CMD_FOR  go to state 40
    CMD_IF   go to state 41
    WRITELN  go to state 42
    ATRIB    go to state 43


State 26

   25 MAIN: BLOCO '.' .

    $default  reduce using rule 25 (MAIN)


State 27

   10 CABECALHO: TK_FUNCTION TK_ID . OPC_PARAM ':' TK_ID

    '('  shift, and go to state 44

    $default  reduce using rule 12 (OPC_PARAM)

    OPC_PARAM  go to state 45


State 28

    9 FUNCTION: $@1 CABECALHO ';' . CORPO $@2 ';'

    TK_VAR    shift, and go to state 46
    TK_BEGIN  shift, and go to state 16

    CORPO  go to state 47
    BLOCO  go to state 48


State 29

   19 VARS: VAR ';' VARS .

    $default  reduce using rule 19 (VARS)


State 30

   21 VAR: IDS ':' TK_ID .

    $default  reduce using rule 21 (VAR)


State 31

   22 VAR: IDS ':' TK_ARRAY . '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID

    '['  shift, and go to state 49


State 32

   23 IDS: IDS ',' TK_ID .

    $default  reduce using rule 23 (IDS)


State 33

   39 ATRIB: TK_ID . TK_ATRIB E
   40      | TK_ID . '[' E ']' TK_ATRIB E

    TK_ATRIB  shift, and go to state 50
    '['       shift, and go to state 51


State 34

   38 WRITELN: TK_WRITELN . '(' E ')'

    '('  shift, and go to state 52


State 35

   36 CMD_IF: TK_IF . E TK_THEN CMD
   37       | TK_IF . E TK_THEN CMD TK_ELSE CMD

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 58
    F  go to state 59


State 36

   35 CMD_FOR: TK_FOR . NOME_VAR TK_ATRIB E TK_TO E TK_DO CMD

    TK_ID  shift, and go to state 60

    NOME_VAR  go to state 61


State 37

   33 CMD: BLOCO .

    $default  reduce using rule 33 (CMD)


State 38

   27 BLOCO: TK_BEGIN $@3 CMDS . TK_END

    TK_END  shift, and go to state 62


State 39

   28 CMDS: CMD . ';' CMDS

    ';'  shift, and go to state 63


State 40

   34 CMD: CMD_FOR .

    $default  reduce using rule 34 (CMD)


State 41

   32 CMD: CMD_IF .

    $default  reduce using rule 32 (CMD)


State 42

   30 CMD: WRITELN .

    $default  reduce using rule 30 (CMD)


State 43

   31 CMD: ATRIB .

    $default  reduce using rule 31 (CMD)


State 44

   11 OPC_PARAM: '(' . PARAMS ')'

    TK_ID  shift, and go to state 12

    PARAMS  go to state 64
    PARAM   go to state 65
    IDS     go to state 66


State 45

   10 CABECALHO: TK_FUNCTION TK_ID OPC_PARAM . ':' TK_ID

    ':'  shift, and go to state 67


State 46

   17 CORPO: TK_VAR . VARS BLOCO

    TK_ID  shift, and go to state 12

    $default  reduce using rule 20 (VARS)

    VARS  go to state 68
    VAR   go to state 14
    IDS   go to state 15


State 47

    9 FUNCTION: $@1 CABECALHO ';' CORPO . $@2 ';'

    $default  reduce using rule 8 ($@2)

    $@2  go to state 69


State 48

   18 CORPO: BLOCO .

    $default  reduce using rule 18 (CORPO)


State 49

   22 VAR: IDS ':' TK_ARRAY '[' . TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID

    TK_CINT  shift, and go to state 70


State 50

   39 ATRIB: TK_ID TK_ATRIB . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 71
    F  go to state 59


State 51

   40 ATRIB: TK_ID '[' . E ']' TK_ATRIB E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 72
    F  go to state 59


State 52

   38 WRITELN: TK_WRITELN '(' . E ')'

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 73
    F  go to state 59


State 53

   58 F: TK_ID . '[' E ']'
   59  | TK_ID . '[' E ']' '[' E ']'
   60  | TK_ID .
   61  | TK_ID . '(' EXPRS ')'

    '('  shift, and go to state 74
    '['  shift, and go to state 75

    $default  reduce using rule 60 (F)


State 54

   55 F: TK_CINT .

    $default  reduce using rule 55 (F)


State 55

   56 F: TK_CDOUBLE .

    $default  reduce using rule 56 (F)


State 56

   57 F: TK_CSTRING .

    $default  reduce using rule 57 (F)


State 57

   53 E: '(' . E ')'

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 76
    F  go to state 59


State 58

   36 CMD_IF: TK_IF E . TK_THEN CMD
   37       | TK_IF E . TK_THEN CMD TK_ELSE CMD
   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_THEN  shift, and go to state 81
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89


State 59

   54 E: F .

    $default  reduce using rule 54 (E)


State 60

   64 NOME_VAR: TK_ID .

    $default  reduce using rule 64 (NOME_VAR)


State 61

   35 CMD_FOR: TK_FOR NOME_VAR . TK_ATRIB E TK_TO E TK_DO CMD

    TK_ATRIB  shift, and go to state 90


State 62

   27 BLOCO: TK_BEGIN $@3 CMDS TK_END .

    $default  reduce using rule 27 (BLOCO)


State 63

   28 CMDS: CMD ';' . CMDS

    TK_ID       shift, and go to state 33
    TK_BEGIN    shift, and go to state 16
    TK_WRITELN  shift, and go to state 34
    TK_IF       shift, and go to state 35
    TK_FOR      shift, and go to state 36

    $default  reduce using rule 29 (CMDS)

    BLOCO    go to state 37
    CMDS     go to state 91
    CMD      go to state 39
    CMD_FOR  go to state 40
    CMD_IF   go to state 41
    WRITELN  go to state 42
    ATRIB    go to state 43


State 64

   11 OPC_PARAM: '(' PARAMS . ')'

    ')'  shift, and go to state 92


State 65

   13 PARAMS: PARAM . ';' PARAMS
   14       | PARAM .

    ';'  shift, and go to state 93

    $default  reduce using rule 14 (PARAMS)


State 66

   15 PARAM: IDS . ':' TK_ID
   16      | IDS . ':' TK_ARRAY '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID
   23 IDS: IDS . ',' TK_ID

    ':'  shift, and go to state 94
    ','  shift, and go to state 24


State 67

   10 CABECALHO: TK_FUNCTION TK_ID OPC_PARAM ':' . TK_ID

    TK_ID  shift, and go to state 95


State 68

   17 CORPO: TK_VAR VARS . BLOCO

    TK_BEGIN  shift, and go to state 16

    BLOCO  go to state 96


State 69

    9 FUNCTION: $@1 CABECALHO ';' CORPO $@2 . ';'

    ';'  shift, and go to state 97


State 70

   22 VAR: IDS ':' TK_ARRAY '[' TK_CINT . TK_PTPT TK_CINT ']' TK_OF TK_ID

    TK_PTPT  shift, and go to state 98


State 71

   39 ATRIB: TK_ID TK_ATRIB E .
   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89

    $default  reduce using rule 39 (ATRIB)


State 72

   40 ATRIB: TK_ID '[' E . ']' TK_ATRIB E
   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89
    ']'      shift, and go to state 99


State 73

   38 WRITELN: TK_WRITELN '(' E . ')'
   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89
    ')'      shift, and go to state 100


State 74

   61 F: TK_ID '(' . EXPRS ')'

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E      go to state 101
    F      go to state 59
    EXPRS  go to state 102


State 75

   58 F: TK_ID '[' . E ']'
   59  | TK_ID '[' . E ']' '[' E ']'

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 103
    F  go to state 59


State 76

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E
   53  | '(' E . ')'

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89
    ')'      shift, and go to state 104


State 77

   44 E: E TK_MOD . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 105
    F  go to state 59


State 78

   49 E: E TK_MAIG . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 106
    F  go to state 59


State 79

   48 E: E TK_MEIG . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 107
    F  go to state 59


State 80

   51 E: E TK_DIF . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 108
    F  go to state 59


State 81

   36 CMD_IF: TK_IF E TK_THEN . CMD
   37       | TK_IF E TK_THEN . CMD TK_ELSE CMD

    TK_ID       shift, and go to state 33
    TK_BEGIN    shift, and go to state 16
    TK_WRITELN  shift, and go to state 34
    TK_IF       shift, and go to state 35
    TK_FOR      shift, and go to state 36

    BLOCO    go to state 37
    CMD      go to state 109
    CMD_FOR  go to state 40
    CMD_IF   go to state 41
    WRITELN  go to state 42
    ATRIB    go to state 43


State 82

   52 E: E TK_AND . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 110
    F  go to state 59


State 83

   46 E: E '<' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 111
    F  go to state 59


State 84

   47 E: E '>' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 112
    F  go to state 59


State 85

   50 E: E '=' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 113
    F  go to state 59


State 86

   41 E: E '+' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 114
    F  go to state 59


State 87

   42 E: E '-' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 115
    F  go to state 59


State 88

   43 E: E '*' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 116
    F  go to state 59


State 89

   45 E: E '/' . E

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 117
    F  go to state 59


State 90

   35 CMD_FOR: TK_FOR NOME_VAR TK_ATRIB . E TK_TO E TK_DO CMD

    TK_ID       shift, and go to state 53
    TK_CINT     shift, and go to state 54
    TK_CDOUBLE  shift, and go to state 55
    TK_CSTRING  shift, and go to state 56
    '('         shift, and go to state 57

    E  go to state 118
    F  go to state 59


State 91

   28 CMDS: CMD ';' CMDS .

    $default  reduce using rule 28 (CMDS)


State 92

   11 OPC_PARAM: '(' PARAMS ')' .

    $default  reduce using rule 11 (OPC_PARAM)


State 93

   13 PARAMS: PARAM ';' . PARAMS

    TK_ID  shift, and go to state 12

    PARAMS  go to state 119
    PARAM   go to state 65
    IDS     go to state 66


State 94

   15 PARAM: IDS ':' . TK_ID
   16      | IDS ':' . TK_ARRAY '[' TK_CINT TK_PTPT TK_CINT ']' TK_OF TK_ID

    TK_ID     shift, and go to state 120
    TK_ARRAY  shift, and go to state 121


State 95

   10 CABECALHO: TK_FUNCTION TK_ID OPC_PARAM ':' TK_ID .

    $default  reduce using rule 10 (CABECALHO)


State 96

   17 CORPO: TK_VAR VARS BLOCO .

    $default  reduce using rule 17 (CORPO)


State 97

    9 FUNCTION: $@1 CABECALHO ';' CORPO $@2 ';' .

    $default  reduce using rule 9 (FUNCTION)


State 98

   22 VAR: IDS ':' TK_ARRAY '[' TK_CINT TK_PTPT . TK_CINT ']' TK_OF TK_ID

    TK_CINT  shift, and go to state 122


State 99

   40 ATRIB: TK_ID '[' E ']' . TK_ATRIB E

    TK_ATRIB  shift, and go to state 123


State 100

   38 WRITELN: TK_WRITELN '(' E ')' .

    $default  reduce using rule 38 (WRITELN)


State 101

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E
   63 EXPRS: E .

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89

    $default  reduce using rule 63 (EXPRS)


State 102

   61 F: TK_ID '(' EXPRS . ')'
   62 EXPRS: EXPRS . ',' E

    ')'  shift, and go to state 124
    ','  shift, and go to state 125


State 103

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E
   58 F: TK_ID '[' E . ']'
   59  | TK_ID '[' E . ']' '[' E ']'

    TK_MOD   shift, and go to state 77
    TK_MAIG  shift, and go to state 78
    TK_MEIG  shift, and go to state 79
    TK_DIF   shift, and go to state 80
    TK_AND   shift, and go to state 82
    '<'      shift, and go to state 83
    '>'      shift, and go to state 84
    '='      shift, and go to state 85
    '+'      shift, and go to state 86
    '-'      shift, and go to state 87
    '*'      shift, and go to state 88
    '/'      shift, and go to state 89
    ']'      shift, and go to state 126


State 104

   53 E: '(' E ')' .

    $default  reduce using rule 53 (E)


State 105

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   44  | E TK_MOD E .
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    $default  reduce using rule 44 (E)


State 106

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   49  | E TK_MAIG E .
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    TK_MOD  shift, and go to state 77
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89

    TK_MAIG  error (nonassociative)
    TK_MEIG  error (nonassociative)
    TK_DIF   error (nonassociative)
    '<'      error (nonassociative)
    '>'      error (nonassociative)
    '='      error (nonassociative)

    $default  reduce using rule 49 (E)


State 107

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   48  | E TK_MEIG E .
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   52  | E . TK_AND E

    TK_MOD  shift, and go to state 77
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89

    TK_MAIG  error (nonassociative)
    TK_MEIG  error (nonassociative)
    TK_DIF   error (nonassociative)
    '<'      error (nonassociative)
    '>'      error (nonassociative)
    '='      error (nonassociative)

    $default  reduce using rule 48 (E)


State 108

   41 E: E . '+' E
   42  | E . '-' E
   43  | E . '*' E
   44  | E . TK_MOD E
   45  | E . '/' E
   46  | E . '<' E
   47  | E . '>' E
   48  | E . TK_MEIG E
   49  | E . TK_MAIG E
   50  | E . '=' E
   51  | E . TK_DIF E
   51  | E TK_DIF E .
   52  | E . TK_AND E

    TK_MOD  shift, and go to state 77
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89

    TK_MAIG  error (nonassociative)
    TK_MEIG  error (nonassociative)
    TK_DIF   error (nonassociative)
    '<'      error (nonassociative)
    '>'      error (nonassociative)
    '='      error (nonassociative)

    $default  reduce using rule 51 (E)


State 109

   36 CMD_IF: TK_IF E TK_THEN CMD .
   37       | TK_IF E TK_THEN CMD . TK_ELSE CMD

    TK_ELSE  shift, and go to state 127
